// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`drivers redux-little-router dispatch actions should dispatch block 1`] = `"ROUTER_BLOCK"`;

exports[`drivers redux-little-router dispatch actions should dispatch go 1`] = `"ROUTER_GO"`;

exports[`drivers redux-little-router dispatch actions should dispatch goBack 1`] = `"ROUTER_GO_BACK"`;

exports[`drivers redux-little-router dispatch actions should dispatch goForward 1`] = `"ROUTER_GO_FORWARD"`;

exports[`drivers redux-little-router dispatch actions should dispatch push 1`] = `"ROUTER_PUSH"`;

exports[`drivers redux-little-router dispatch actions should dispatch replace 1`] = `"ROUTER_REPLACE"`;

exports[`drivers redux-little-router dispatch actions should dispatch unblock 1`] = `"ROUTER_UNBLOCK"`;

exports[`drivers redux-little-router router implementation should overide default router implementation 1`] = `
Array [
  Array [
    Object {
      "routes": Object {
        "/": Object {
          "/foo": Object {
            "title": "FOO_ROUTE",
          },
        },
      },
    },
  ],
]
`;

exports[`drivers redux-little-router selectors should get router state 1`] = `
Array [
  Array [
    Object {
      "hash": "",
      "options": Object {},
      "params": Object {},
      "pathname": "/foo",
      "previous": Object {
        "hash": "",
        "key": undefined,
        "params": Object {},
        "pathname": "/foo",
        "query": Object {},
        "queue": Array [
          Object {
            "hash": "",
            "options": Object {},
            "pathname": "/foo",
          },
        ],
        "result": Object {
          "parent": Object {
            "route": "/",
          },
          "title": "FOO_ROUTE",
        },
        "route": "/foo",
        "search": "",
        "state": undefined,
      },
      "query": Object {},
      "queue": Array [],
      "result": Object {
        "parent": Object {
          "route": "/",
        },
        "title": "FOO_ROUTE",
      },
      "route": "/foo",
      "routes": Object {
        "/": Object {},
        "/foo": Object {
          "parent": Object {
            "route": "/",
          },
          "title": "FOO_ROUTE",
        },
      },
      "search": "",
    },
  ],
]
`;

exports[`drivers redux-little-router should get router param 1`] = `
Array [
  Array [
    "123",
  ],
]
`;

exports[`drivers should get query param 1`] = `
Array [
  Array [
    "baz",
  ],
]
`;

exports[`drivers should get result param of the current route else undefined 1`] = `
Array [
  Array [
    "FOO_ROUTE",
  ],
  Array [
    undefined,
  ],
]
`;

exports[`drivers should get result param of the parent else undefined 1`] = `
Array [
  Array [
    "ROOT",
  ],
  Array [
    undefined,
  ],
]
`;

exports[`drivers should return true is its the current route else false 1`] = `
Array [
  Array [
    true,
  ],
  Array [
    false,
  ],
]
`;

exports[`drivers should return true is the param with the given value match in the route result, else false 1`] = `
Array [
  Array [
    true,
  ],
  Array [
    true,
  ],
  Array [
    false,
  ],
]
`;
